Rewrite based on porting the Node.js “net” module
This fixes quite a few bugs, and also means we don't need to worry about
all the higher level corner-cases. Plus, it will be much easier to track
improvements made upstream.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
       ]
     ]
   },
-  "license": "LGPL-2.0 WITH WxWindows-exception-3.1",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "http://github.com/frida/frida-net.git"
@@ -31,6 +31,6 @@
     "url": "http://github.com/frida/frida-net/issues"
   },
   "dependencies": {
-    "co": "^4.6.0"
+    "ipaddr.js": "^1.2.0"
   }
 }
