--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
         {
           "presets": [
             "es2015"
+          ],
+          "plugins": [
+            "transform-runtime"
           ]
         }
       ]
@@ -31,6 +34,9 @@
     "url": "http://github.com/frida/frida-net/issues"
   },
   "dependencies": {
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-runtime": "^6.20.0",
     "ipaddr.js": "^1.2.0"
   }
 }
