--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-runtime": "^6.20.0",
+    "babelify": "^7.3.0",
     "ipaddr.js": "^1.2.0"
   }
 }
