--- a/package.json
+++ b/package.json
@@ -16,10 +16,20 @@
         "babelify",
         {
           "presets": [
-            "es2015"
+            [
+              "@babel/preset-env",
+              {
+                "loose": true
+              }
+            ]
           ],
           "plugins": [
-            "transform-runtime"
+            [
+              "@babel/plugin-transform-runtime",
+              {
+                "corejs": true
+              }
+            ]
           ]
         }
       ]
@@ -34,10 +44,11 @@
     "url": "http://github.com/frida/frida-net/issues"
   },
   "dependencies": {
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-runtime": "^6.20.0",
-    "babelify": "^7.3.0",
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/runtime": "^7.1.2",
+    "babelify": "^10.0.0",
     "ipaddr.js": "^1.2.0"
   }
 }
