--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
             [
               "@babel/plugin-transform-runtime",
               {
-                "corejs": true
+                "corejs": 2
               }
             ]
           ]
@@ -51,7 +51,7 @@
     "@babel/core": "^7.1.2",
     "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
-    "@babel/runtime": "^7.1.2",
+    "@babel/runtime-corejs2": "^7.1.2",
     "babelify": "^10.0.0",
     "ipaddr.js": "^1.2.0"
   }
