Tighten up the list of published files

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "homepage": "http://www.frida.re",
   "main": "index.js",
   "files": [
-    "index.js",
-    "lib/adapter.js"
+    "/index.js",
+    "/lib/adapter.js"
   ],
   "browserify": {
     "transform": [
