--- a/examples/ftp-server/package.json
+++ b/examples/ftp-server/package.json
@@ -4,12 +4,12 @@
   "description": "Example showing how to use frida-net's server functionality",
   "private": true,
   "scripts": {
-    "prepublish": "npm run build",
+    "prepare": "npm run build",
     "build": "frida-compile agent -o _agent.js",
     "watch": "frida-compile agent -o _agent.js -w"
   },
   "devDependencies": {
-    "frida-compile": "^2.0.6",
-    "ftpd": "^0.2.15"
+    "frida-compile": "^9.0.6",
+    "@oleavr/ftpd": "^0.2.15"
   }
 }
