--- a/examples/irc-client/package.json
+++ b/examples/irc-client/package.json
@@ -4,12 +4,12 @@
   "description": "Example showing how to use frida-net's client functionality",
   "private": true,
   "scripts": {
-    "prepublish": "npm run build",
+    "prepare": "npm run build",
     "build": "frida-compile agent -o _agent.js",
     "watch": "frida-compile agent -o _agent.js -w"
   },
   "devDependencies": {
-    "frida-compile": "^2.0.6",
-    "irc": "0.3.7"
+    "frida-compile": "^9.0.6",
+    "irc": "^0.5.2"
   }
 }
