--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "keywords": [
     "frida"
   ],
-  "homepage": "http://www.frida.re",
+  "homepage": "https://www.frida.re",
   "main": "index.js",
   "files": [
     "/index.js",
@@ -17,10 +17,10 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "http://github.com/frida/frida-net.git"
+    "url": "https://github.com/frida/frida-net.git"
   },
   "bugs": {
-    "url": "http://github.com/frida/frida-net/issues"
+    "url": "https://github.com/frida/frida-net/issues"
   },
   "dependencies": {
     "ipaddr.js": "^1.9.1"
