--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "frida-net",
+  "name": "@frida/net",
+  "description": "Node.js's net module for Frida",
   "version": "3.0.1",
+  "publishConfig": {
+    "access": "public"
+  },
   "authors": [
     "Frida Developers"
   ],
-  "description": "Node.js compatible “net” module for Frida",
   "keywords": [
     "frida"
   ],
-  "homepage": "https://www.frida.re",
+  "homepage": "https://frida.re",
   "main": "index.js",
   "files": [
     "/index.js",
@@ -17,12 +20,9 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/frida/frida-net.git"
+    "url": "https://github.com/frida/gumjs-net.git"
   },
   "bugs": {
-    "url": "https://github.com/frida/frida-net/issues"
-  },
-  "dependencies": {
-    "ipaddr.js": "^1.9.1"
+    "url": "https://github.com/frida/gumjs-net/issues"
   }
 }
